--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
   test-bot:
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-14, macos-13]
+        os: [macos-14, macos-13]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
@@ -28,12 +28,6 @@ jobs:
       - run: brew test-bot --only-setup
 
       - run: brew test-bot --only-tap-syntax
-
-      - name: Install libbtparse on Linux
-        run: |
-          sudo apt-get --assume-yes install libbtparse-dev
-          sudo ldconfig
-        if: ${{ matrix.os == 'ubuntu-22.04' }}
 
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
